# verona-io

./: .gitignore  .gitmodules
baselines/: Makefile  common.c  common.h  server.c
design-docs/: client.py  pseudo_api.py  server.py
results/: c-floating-bim.txt  c-floating-fixed.txt  c-static-bim.txt  c-static-fixed.txt  verona-asio-bim.txt  verona-asio-fixed.txt  verona-floating-fixed.txt  verona-floating-many-2-bim.txt  verona-floating-many-bim.txt  verona-floating-many-fixed.txt  verona-floating-many-unfair-fixed.txt  verona-floating-one-bim.txt  verona-floating-one-fixed.txt  verona-floating-two-fixed.txt  verona-static-bim.txt  verona-static-fixed.txt  verona-token-fixed.txt
results/processed/: c-floating-bim.txt  c-floating-fixed.txt  c-static-bim.txt  c-static-fixed.txt  verona-asio-bim.txt  verona-asio-fixed.txt  verona-floating-fixed.txt  verona-floating-many-2-bim.txt  verona-floating-many-bim.txt  verona-floating-many-fixed.txt  verona-floating-many-unfair-fixed.txt  verona-floating-one-bim.txt  verona-floating-one-fixed.txt  verona-floating-two-fixed.txt  verona-static-bim.txt  verona-static-fixed.txt  verona-token-fixed.txt
scripts/: experiments.ipynb  process.sh
src/: CMakeLists.txt  server.cc  server.cpp
